--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -41,7 +41,7 @@ changelog:
       - '^test:'
 brews:
   -
-    tap:
+    repository:
       owner: shubhxms
       name: homebrew-tools
     commit_author:
